--- a/app/scss/partials/base/_small-desktop.scss
+++ b/app/scss/partials/base/_small-desktop.scss
@@ -72,7 +72,7 @@
 	}
 
 	#map{
-		// width: 70%!important;
+		width: 70%!important;
 		// max-width: 500px;
 	}
 
