--- a/app/scss/partials/base/_typography.scss
+++ b/app/scss/partials/base/_typography.scss
@@ -223,7 +223,7 @@ div.molecule-text{
 #comcast-logo{
 	color: white;
 	font:$comcast-p!important;
-	letter-spacing: 4.5px!important;
+	letter-spacing: 4.5px;
 	
 	@include media($xl-desktop){
 		font:$lg-comcast-p!important;
